--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/style/normalize.css">
+    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <script src="/bundle.js"></script>
   </head>
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
 </html>
